--- a/JOURNAL/Journal.html
+++ b/JOURNAL/Journal.html
@@ -451,7 +451,7 @@ stepa = 5365</code></pre>
 <p>Sirena TOT files updated for 2006-2022.</p>
 <p>With the new output scheme.</p><h2 id="thanasisn-86">2023-04-03 09:14 [ThanasisN]</h2>
 <p>Radmon found freezed with different system errors.</p>
-<p>No tracking with CHP-1 at start of the day.</p>
+<p>No tracking with CHP-1 at start of the day. Day is cloudy.</p>
 <p>Reboot seems to fixed the problem.</p>
 </div>
 <hr />
