--- a/JOURNAL/Journal.html
+++ b/JOURNAL/Journal.html
@@ -53,15 +53,14 @@
 
                                                         <ul>
                                                         <li><a href="#about">About</a></li>
-                                                        <li><a href="#section">.</a></li>
-                                                        <li><a href="#section-1">2015</a></li>
-                                                        <li><a href="#section-2">2016</a></li>
-                                                        <li><a href="#section-3">2017</a></li>
-                                                        <li><a href="#section-4">2018</a></li>
-                                                        <li><a href="#section-5">2019</a></li>
-                                                        <li><a href="#section-6">2020</a></li>
-                                                        <li><a href="#section-7">2022</a></li>
-                                                        <li><a href="#section-8">2023</a></li>
+                                                        <li><a href="#section">2015</a></li>
+                                                        <li><a href="#section-1">2016</a></li>
+                                                        <li><a href="#section-2">2017</a></li>
+                                                        <li><a href="#section-3">2018</a></li>
+                                                        <li><a href="#section-4">2019</a></li>
+                                                        <li><a href="#section-5">2020</a></li>
+                                                        <li><a href="#section-6">2022</a></li>
+                                                        <li><a href="#section-7">2023</a></li>
                                                         <li><a href="#journal-instructions">Journal instructions</a>
                                                         <ul>
                                                         <li><a href="#format-for-entries">Format for entries</a>
@@ -86,17 +85,13 @@
 <p>Other incidents on the roof may be reported here.</p>
 <p>Other journals and log exist, but are not included here.</p>
 <hr />
-<h1 id="section">.</h1>
-<div class="columns" style="column-count: 2 ;; column-gap: 4em ;; column-rule: 1px solid black ;">
-
-</div>
-<h1 id="section-1">2015</h1>
+<h1 id="section">2015</h1>
 <div class="columns" style="column-count: 2 ;; column-gap: 4em ;; column-rule: 1px solid black ;">
 <h2 id="thanasisn">2015-12-30 [ThanasisN]</h2>
 <p>Μάλλον βραχυκύκλωμα μιας κόλλησης της φωτοδιόδου του tracker.</p>
 <p>Ανταλλάξαμε την πολικότητα των καλωδίων του αζιμούθιου κινητήρα ώστε να διορθώσουμε την ανάποδη φορά του κινητήρα.</p>
 </div>
-<h1 id="section-2">2016</h1>
+<h1 id="section-1">2016</h1>
 <div class="columns" style="column-count: 2 ;; column-gap: 4em ;; column-rule: 1px solid black ;">
 <h2 id="thanasisn-1">2016-01-08 [ThanasisN]</h2>
 <p>Φαίνεται ότι το πρόβλημα ήταν μία ή παραπάνω κολλήσεις στη πλακέτα του tracker.</p>
@@ -186,7 +181,7 @@
 <li>silica gel replace for CHP-1</li>
 </ul>
 </div>
-<h1 id="section-3">2017</h1>
+<h1 id="section-2">2017</h1>
 <div class="columns" style="column-count: 2 ;; column-gap: 4em ;; column-rule: 1px solid black ;">
 <h2 id="thanasisn-30">2017-01-10 [ThanasisN]</h2>
 <p>Snowfall, instruments probably covered by the snow.</p><h2 id="thanasisn-31">2017-01-11 [ThanasisN]</h2>
@@ -292,7 +287,7 @@ stepa = 5365</code></pre>
 <p>Will exclude direct data from analysis.</p><h2 id="thanasisn-53">2017-12-26 [ThanasisN]</h2>
 <p>Tracker start working by itself probably!</p>
 </div>
-<h1 id="section-4">2018</h1>
+<h1 id="section-3">2018</h1>
 <div class="columns" style="column-count: 2 ;; column-gap: 4em ;; column-rule: 1px solid black ;">
 <h2 id="thanasisn-54">2018-01-18 [ThanasisN]</h2>
 <p>Early morning no main power</p>
@@ -327,7 +322,7 @@ stepa = 5365</code></pre>
 <p>10:56 local time</p>
 <p>8:56 UTC</p>
 </div>
-<h1 id="section-5">2019</h1>
+<h1 id="section-4">2019</h1>
 <div class="columns" style="column-count: 2 ;; column-gap: 4em ;; column-rule: 1px solid black ;">
 <h2 id="thanasisn-62">2019-04-11 09:27 [ThanasisN]</h2>
 <p>Instrument Cleaning</p>
@@ -386,7 +381,7 @@ stepa = 5365</code></pre>
 </dd>
 </dl>
 </div>
-<h1 id="section-6">2020</h1>
+<h1 id="section-5">2020</h1>
 <div class="columns" style="column-count: 2 ;; column-gap: 4em ;; column-rule: 1px solid black ;">
 <h2 id="thanasisn-75">2020-01-03 [ThanasisN]</h2>
 <p>There was a ransomware discovered at 2019-12-25</p>
@@ -409,7 +404,7 @@ stepa = 5365</code></pre>
 <p>10:59 - 11:02 local time</p>
 <p>07:59 - 08:02 UTC</p>
 </div>
-<h1 id="section-7">2022</h1>
+<h1 id="section-6">2022</h1>
 <div class="columns" style="column-count: 2 ;; column-gap: 4em ;; column-rule: 1px solid black ;">
 <h2 id="thanasisn-80">2022-02-21 13:50 [ThanasisN]</h2>
 <p>The inclined CM-21 was leveled, for comparison to the horizontal one, before calibration of the horizontal.</p>
@@ -438,7 +433,7 @@ stepa = 5365</code></pre>
 </dd>
 </dl>
 </div>
-<h1 id="section-8">2023</h1>
+<h1 id="section-7">2023</h1>
 <div class="columns" style="column-count: 2 ;; column-gap: 4em ;; column-rule: 1px solid black ;">
 <h2 id="thanasisn-84">2023-03-28 15:48 [ThanasisN]</h2>
 <p>We removed some Global radiation data output constrains.</p>
