--- a/JOURNAL/Journal.html
+++ b/JOURNAL/Journal.html
@@ -447,7 +447,9 @@ stepa = 5365</code></pre>
 <p>With the new output scheme.</p><h2 id="thanasisn-86">2023-04-03 09:14 [ThanasisN]</h2>
 <p>Radmon found freezed with different system errors.</p>
 <p>No tracking with CHP-1 at start of the day. Day is cloudy.</p>
-<p>Reboot seems to fixed the problem.</p>
+<p>Reboot seems to fixed the problem.</p><h2 id="section-8">2023-04-04 12:59</h2>
+<p>The tracker didn’t start at the morning due to an error of the <code>com port</code>.</p>
+<p>Tracker program was restarted manual.</p>
 </div>
 <hr />
 <h1 id="journal-instructions">Journal instructions</h1>
@@ -485,7 +487,7 @@ markdown.
 <p>At least you need <code>pandoc</code> installed.</p>
 <h1 id="list-of-tags">List of tags</h1>
 <pre><code>  5 #async
- 47 #chp1
+ 48 #chp1
   1 #cleaned
  15 #cleaning
  11 #cm21
@@ -510,7 +512,7 @@ markdown.
   1 #sync
   1 #temp
   1 #test
-  6 #tracker
+  7 #tracker
  20 #tracker2</code></pre>                    
                 </div>
             </div>
