--- a/JOURNAL/Journal.html
+++ b/JOURNAL/Journal.html
@@ -447,7 +447,7 @@ stepa = 5365</code></pre>
 <p>With the new output scheme.</p><h2 id="thanasisn-86">2023-04-03 09:14 [ThanasisN]</h2>
 <p>Radmon found freezed with different system errors.</p>
 <p>No tracking with CHP-1 at start of the day. Day is cloudy.</p>
-<p>Reboot seems to fixed the problem.</p><h2 id="section-8">2023-04-04 12:59</h2>
+<p>Reboot seems to fixed the problem.</p><h2 id="thanasisn-87">2023-04-04 12:59 [ThanasisN]</h2>
 <p>The tracker didn’t start at the morning due to an error of the <code>com port</code>.</p>
 <p>Tracker program was restarted manual.</p>
 </div>
