--- a/JOURNAL/Journal.html
+++ b/JOURNAL/Journal.html
@@ -449,7 +449,13 @@ stepa = 5365</code></pre>
 <p>No tracking with CHP-1 at start of the day. Day is cloudy.</p>
 <p>Reboot seems to fixed the problem.</p><h2 id="thanasisn-87">2023-04-04 12:59 [ThanasisN]</h2>
 <p>The tracker didn’t start at the morning due to an error of the <code>com port</code>.</p>
-<p>Tracker program was restarted manual.</p>
+<p>Tracker program was restarted manual.</p><h2 id="section-8">2023-04-19 09:19</h2>
+<p>The tracker didn’t start normally today.</p>
+<dl>
+<dt>I restart it manual at</dt>
+<dd><p>09:10 LT</p>
+</dd>
+</dl>
 </div>
 <hr />
 <h1 id="journal-instructions">Journal instructions</h1>
@@ -487,14 +493,14 @@ markdown.
 <p>At least you need <code>pandoc</code> installed.</p>
 <h1 id="list-of-tags">List of tags</h1>
 <pre><code>  5 #async
- 48 #chp1
+ 49 #chp1
   1 #cleaned
  15 #cleaning
  11 #cm21
   2 #codding
   3 #data_corruption_certain
   1 #data_format_change
- 32 #data_loss
+ 33 #data_loss
   3 #down_time
   5 #error
   2 #inclined
@@ -512,7 +518,7 @@ markdown.
   1 #sync
   1 #temp
   1 #test
-  7 #tracker
+  8 #tracker
  20 #tracker2</code></pre>                    
                 </div>
             </div>
