--- a/JOURNAL/Journal.html
+++ b/JOURNAL/Journal.html
@@ -425,7 +425,8 @@ stepa = 5365</code></pre>
 <li>installed</li>
 <li>leveled</li>
 <li>start measuring <strong>without sun shield</strong></li>
-</ul><h2 id="thanasisn-83">2022-06-27 11:40 [ThanasisN]</h2>
+</ul><h2 id="ba">2022-06-16 00:00 [BA]</h2>
+<p>Τελικά έβαλα το σπασμένο shield (το κόλλησα πρόχειρα) σήμερα στις 7.00 UTC.</p><h2 id="thanasisn-83">2022-06-27 11:40 [ThanasisN]</h2>
 <p>The inclined CM-21 is returned to the inclined position from the horizontal.</p>
 <dl>
 <dt>Last data in horizontal position is at</dt>
