--- a/JOURNAL/Journal.html
+++ b/JOURNAL/Journal.html
@@ -450,7 +450,7 @@ stepa = 5365</code></pre>
 <p>No tracking with CHP-1 at start of the day. Day is cloudy.</p>
 <p>Reboot seems to fixed the problem.</p><h2 id="thanasisn-87">2023-04-04 12:59 [ThanasisN]</h2>
 <p>The tracker didn’t start at the morning due to an error of the <code>com port</code>.</p>
-<p>Tracker program was restarted manual.</p><h2 id="section-8">2023-04-19 09:19</h2>
+<p>Tracker program was restarted manual.</p><h2 id="thanasisn-88">2023-04-19 09:19 [ThanasisN]</h2>
 <p>The tracker didn’t start normally today.</p>
 <dl>
 <dt>I restart it manual at</dt>
