--- a/JOURNAL/Journal.html
+++ b/JOURNAL/Journal.html
@@ -406,7 +406,12 @@ stepa = 5365</code></pre>
 </div>
 <h1 id="section-6">2022</h1>
 <div class="columns" style="column-count: 2 ;; column-gap: 4em ;; column-rule: 1px solid black ;">
-<h2 id="thanasisn-80">2022-02-21 13:50 [ThanasisN]</h2>
+<h2 id="thanasisn-80">2022-02-17 00:00 [ThanasisN]</h2>
+<p>Broadband instruments were installed? after they have been removed from the instruments tables.</p>
+<p>Work on instruments table was performed.</p>
+<p>New instrument table was installed for CCD spectrometers.</p>
+<p>CHP-1 was between brewers and the new CCD table, may be affected.</p>
+<p>There are photos.</p><h2 id="thanasisn-81">2022-02-21 13:50 [ThanasisN]</h2>
 <p>The inclined CM-21 was leveled, for comparison to the horizontal one, before calibration of the horizontal.</p>
 <dl>
 <dt>We consider after</dt>
@@ -414,19 +419,19 @@ stepa = 5365</code></pre>
 </dd>
 </dl>
 <p>the inclined CM-21 to have been set to horizontal position.</p>
-<p>This is reflected on the measurements.</p><h2 id="thanasisn-81">2022-05-23 [ThanasisN]</h2>
+<p>This is reflected on the measurements.</p><h2 id="thanasisn-82">2022-05-23 [ThanasisN]</h2>
 <dl>
 <dt>Installation of horizontal CM-21</dt>
 <dd><p>07:55 - 08:17 UTC</p>
 </dd>
-</dl><h2 id="thanasisn-82">2022-06-03 [ThanasisN]</h2>
+</dl><h2 id="thanasisn-83">2022-06-03 [ThanasisN]</h2>
 <p>The horizontal Global CM-21 was</p>
 <ul>
 <li>installed</li>
 <li>leveled</li>
 <li>start measuring <strong>without sun shield</strong></li>
 </ul><h2 id="ba">2022-06-16 00:00 [BA]</h2>
-<p>Τελικά έβαλα το σπασμένο shield (το κόλλησα πρόχειρα) σήμερα στις 7.00 UTC.</p><h2 id="thanasisn-83">2022-06-27 11:40 [ThanasisN]</h2>
+<p>Τελικά έβαλα το σπασμένο shield (το κόλλησα πρόχειρα) σήμερα στις 7.00 UTC.</p><h2 id="thanasisn-84">2022-06-27 11:40 [ThanasisN]</h2>
 <p>The inclined CM-21 is returned to the inclined position from the horizontal.</p>
 <dl>
 <dt>Last data in horizontal position is at</dt>
@@ -436,21 +441,21 @@ stepa = 5365</code></pre>
 </div>
 <h1 id="section-7">2023</h1>
 <div class="columns" style="column-count: 2 ;; column-gap: 4em ;; column-rule: 1px solid black ;">
-<h2 id="thanasisn-84">2023-03-28 15:48 [ThanasisN]</h2>
+<h2 id="thanasisn-85">2023-03-28 15:48 [ThanasisN]</h2>
 <p>We removed some Global radiation data output constrains.</p>
 <p>Now we allowed:</p>
 <ul>
 <li>Any value of GHI during night (it was NA during night)</li>
 <li>Negative values during day (it was set to zero)</li>
 </ul>
-<p>Will update all sirena data for years 2006-2022, previous exported by us.</p><h2 id="thanasisn-85">2023-03-28 17:31 [ThanasisN]</h2>
+<p>Will update all sirena data for years 2006-2022, previous exported by us.</p><h2 id="thanasisn-86">2023-03-28 17:31 [ThanasisN]</h2>
 <p>Sirena TOT files updated for 2006-2022.</p>
-<p>With the new output scheme.</p><h2 id="thanasisn-86">2023-04-03 09:14 [ThanasisN]</h2>
+<p>With the new output scheme.</p><h2 id="thanasisn-87">2023-04-03 09:14 [ThanasisN]</h2>
 <p>Radmon found freezed with different system errors.</p>
 <p>No tracking with CHP-1 at start of the day. Day is cloudy.</p>
-<p>Reboot seems to fixed the problem.</p><h2 id="thanasisn-87">2023-04-04 12:59 [ThanasisN]</h2>
+<p>Reboot seems to fixed the problem.</p><h2 id="thanasisn-88">2023-04-04 12:59 [ThanasisN]</h2>
 <p>The tracker didn’t start at the morning due to an error of the <code>com port</code>.</p>
-<p>Tracker program was restarted manual.</p><h2 id="thanasisn-88">2023-04-19 09:19 [ThanasisN]</h2>
+<p>Tracker program was restarted manual.</p><h2 id="thanasisn-89">2023-04-19 09:19 [ThanasisN]</h2>
 <p>The tracker didn’t start normally today.</p>
 <dl>
 <dt>I restart it manual at</dt>
@@ -494,7 +499,9 @@ markdown.
 <p>At least you need <code>pandoc</code> installed.</p>
 <h1 id="list-of-tags">List of tags</h1>
 <pre><code>  5 #async
- 49 #chp1
+  1 #broadband
+  1 #ccd
+ 50 #chp1
   1 #cleaned
  15 #cleaning
  11 #cm21
@@ -520,7 +527,8 @@ markdown.
   1 #temp
   1 #test
   8 #tracker
- 20 #tracker2</code></pre>                    
+ 20 #tracker2
+  1 #works</code></pre>                    
                 </div>
             </div>
             <script src="https://vjs.zencdn.net/5.4.4/video.js"></script>
