--- a/JOURNAL/Journal.html
+++ b/JOURNAL/Journal.html
@@ -412,19 +412,20 @@ stepa = 5365</code></pre>
 <p>New instrument table was installed for CCD spectrometers.</p>
 <p>CHP-1 was between brewers and the new CCD table, may be affected.</p>
 <p>There are photos.</p><h2 id="thanasisn-81">2022-02-21 13:50 [ThanasisN]</h2>
-<p>The inclined CM-21 was leveled, for comparison to the horizontal one, before calibration of the horizontal.</p>
 <dl>
 <dt>We consider after</dt>
 <dd><p>11:50 UTC</p>
 </dd>
 </dl>
 <p>the inclined CM-21 to have been set to horizontal position.</p>
-<p>This is reflected on the measurements.</p><h2 id="thanasisn-82">2022-05-23 [ThanasisN]</h2>
+<p>This is reflected on the measurements.</p>
+<p>There are photos.</p><h2 id="thanasisn-82">2022-05-23 [ThanasisN]</h2>
 <dl>
 <dt>Installation of horizontal CM-21</dt>
 <dd><p>07:55 - 08:17 UTC</p>
 </dd>
-</dl><h2 id="thanasisn-83">2022-06-03 [ThanasisN]</h2>
+</dl>
+<p>There are photos.</p><h2 id="thanasisn-83">2022-06-03 [ThanasisN]</h2>
 <p>The horizontal Global CM-21 was</p>
 <ul>
 <li>installed</li>
@@ -501,7 +502,7 @@ markdown.
 <pre><code>  5 #async
   1 #broadband
   1 #ccd
- 50 #chp1
+ 51 #chp1
   1 #cleaned
  15 #cleaning
  11 #cm21
