--- a/JOURNAL/Journal.html
+++ b/JOURNAL/Journal.html
@@ -411,7 +411,11 @@ stepa = 5365</code></pre>
 <p>Work on instruments table was performed.</p>
 <p>New instrument table was installed for CCD spectrometers.</p>
 <p>CHP-1 was between brewers and the new CCD table, may be affected.</p>
-<p>There are photos.</p><h2 id="thanasisn-81">2022-02-21 13:50 [ThanasisN]</h2>
+<p>There are photos.</p><h2 id="thanasisn-81">2022-02-21 00:00 [ThanasisN]</h2>
+<p>The CHP-1 was moved!</p>
+<p>It was west of the brewers and moved east of the brewers.</p>
+<p>The inclined CM-21 was leveled, for comparison to the horizontal one, before calibration of the horizontal.</p>
+<p>There are photos</p><h2 id="thanasisn-82">2022-02-21 13:50 [ThanasisN]</h2>
 <dl>
 <dt>We consider after</dt>
 <dd><p>11:50 UTC</p>
@@ -419,20 +423,21 @@ stepa = 5365</code></pre>
 </dl>
 <p>the inclined CM-21 to have been set to horizontal position.</p>
 <p>This is reflected on the measurements.</p>
-<p>There are photos.</p><h2 id="thanasisn-82">2022-05-23 [ThanasisN]</h2>
+<p>There are photos.</p><h2 id="thanasisn-83">2022-05-23 [ThanasisN]</h2>
 <dl>
 <dt>Installation of horizontal CM-21</dt>
 <dd><p>07:55 - 08:17 UTC</p>
 </dd>
 </dl>
-<p>There are photos.</p><h2 id="thanasisn-83">2022-06-03 [ThanasisN]</h2>
+<p>There are photos.</p><h2 id="thanasisn-84">2022-06-03 [ThanasisN]</h2>
 <p>The horizontal Global CM-21 was</p>
 <ul>
 <li>installed</li>
 <li>leveled</li>
 <li>start measuring <strong>without sun shield</strong></li>
-</ul><h2 id="ba">2022-06-16 00:00 [BA]</h2>
-<p>Τελικά έβαλα το σπασμένο shield (το κόλλησα πρόχειρα) σήμερα στις 7.00 UTC.</p><h2 id="thanasisn-84">2022-06-27 11:40 [ThanasisN]</h2>
+</ul>
+<p>Photos exist.</p><h2 id="ba">2022-06-16 00:00 [BA]</h2>
+<p>Τελικά έβαλα το σπασμένο shield (το κόλλησα πρόχειρα) σήμερα στις 7.00 UTC.</p><h2 id="thanasisn-85">2022-06-27 11:40 [ThanasisN]</h2>
 <p>The inclined CM-21 is returned to the inclined position from the horizontal.</p>
 <dl>
 <dt>Last data in horizontal position is at</dt>
@@ -442,21 +447,21 @@ stepa = 5365</code></pre>
 </div>
 <h1 id="section-7">2023</h1>
 <div class="columns" style="column-count: 2 ;; column-gap: 4em ;; column-rule: 1px solid black ;">
-<h2 id="thanasisn-85">2023-03-28 15:48 [ThanasisN]</h2>
+<h2 id="thanasisn-86">2023-03-28 15:48 [ThanasisN]</h2>
 <p>We removed some Global radiation data output constrains.</p>
 <p>Now we allowed:</p>
 <ul>
 <li>Any value of GHI during night (it was NA during night)</li>
 <li>Negative values during day (it was set to zero)</li>
 </ul>
-<p>Will update all sirena data for years 2006-2022, previous exported by us.</p><h2 id="thanasisn-86">2023-03-28 17:31 [ThanasisN]</h2>
+<p>Will update all sirena data for years 2006-2022, previous exported by us.</p><h2 id="thanasisn-87">2023-03-28 17:31 [ThanasisN]</h2>
 <p>Sirena TOT files updated for 2006-2022.</p>
-<p>With the new output scheme.</p><h2 id="thanasisn-87">2023-04-03 09:14 [ThanasisN]</h2>
+<p>With the new output scheme.</p><h2 id="thanasisn-88">2023-04-03 09:14 [ThanasisN]</h2>
 <p>Radmon found freezed with different system errors.</p>
 <p>No tracking with CHP-1 at start of the day. Day is cloudy.</p>
-<p>Reboot seems to fixed the problem.</p><h2 id="thanasisn-88">2023-04-04 12:59 [ThanasisN]</h2>
+<p>Reboot seems to fixed the problem.</p><h2 id="thanasisn-89">2023-04-04 12:59 [ThanasisN]</h2>
 <p>The tracker didn’t start at the morning due to an error of the <code>com port</code>.</p>
-<p>Tracker program was restarted manual.</p><h2 id="thanasisn-89">2023-04-19 09:19 [ThanasisN]</h2>
+<p>Tracker program was restarted manual.</p><h2 id="thanasisn-90">2023-04-19 09:19 [ThanasisN]</h2>
 <p>The tracker didn’t start normally today.</p>
 <dl>
 <dt>I restart it manual at</dt>
@@ -502,7 +507,7 @@ markdown.
 <pre><code>  5 #async
   1 #broadband
   1 #ccd
- 51 #chp1
+ 52 #chp1
   1 #cleaned
  15 #cleaning
  11 #cm21
