--- a/JOURNAL/Journal.html
+++ b/JOURNAL/Journal.html
@@ -467,7 +467,10 @@ stepa = 5365</code></pre>
 <dt>I restart it manual at</dt>
 <dd><p>09:10 LT</p>
 </dd>
-</dl>
+</dl><h2 id="section-8">2023-05-18 09:15</h2>
+<p>Cleaned broadband and brewers instruments at</p>
+<p>06:07 - 06:10 UTC</p>
+<p>A lot of dust from previous rain.</p>
 </div>
 <hr />
 <h1 id="journal-instructions">Journal instructions</h1>
@@ -505,11 +508,12 @@ markdown.
 <p>At least you need <code>pandoc</code> installed.</p>
 <h1 id="list-of-tags">List of tags</h1>
 <pre><code>  5 #async
-  1 #broadband
+  1 #brewers
+  2 #broadband
   1 #ccd
  52 #chp1
   1 #cleaned
- 15 #cleaning
+ 16 #cleaning
  11 #cm21
   2 #codding
   3 #data_corruption_certain
