--- a/JOURNAL/Journal.html
+++ b/JOURNAL/Journal.html
@@ -470,7 +470,9 @@ stepa = 5365</code></pre>
 </dl><h2 id="section-8">2023-05-18 09:15</h2>
 <p>Cleaned broadband and brewers instruments at</p>
 <p>06:07 - 06:10 UTC</p>
-<p>A lot of dust from previous rain.</p>
+<p>A lot of dust from previous rain.</p><h2 id="thanasisn-91">2023-05-25 08:52 [ThanasisN]</h2>
+<p>Clean spider web from inside of CHP-1 sun shader at</p>
+<p>05:52 UTC</p>
 </div>
 <hr />
 <h1 id="journal-instructions">Journal instructions</h1>
@@ -511,7 +513,7 @@ markdown.
   1 #brewers
   2 #broadband
   1 #ccd
- 52 #chp1
+ 53 #chp1
   1 #cleaned
  16 #cleaning
  11 #cm21
