--- a/JOURNAL/Journal.html
+++ b/JOURNAL/Journal.html
@@ -467,10 +467,10 @@ stepa = 5365</code></pre>
 <dt>I restart it manual at</dt>
 <dd><p>09:10 LT</p>
 </dd>
-</dl><h2 id="section-8">2023-05-18 09:15</h2>
+</dl><h2 id="thanasisn-91">2023-05-18 09:15 [ThanasisN]</h2>
 <p>Cleaned broadband and brewers instruments at</p>
 <p>06:07 - 06:10 UTC</p>
-<p>A lot of dust from previous rain.</p><h2 id="thanasisn-91">2023-05-25 08:52 [ThanasisN]</h2>
+<p>A lot of dust from previous rain.</p><h2 id="thanasisn-92">2023-05-25 08:52 [ThanasisN]</h2>
 <p>Clean spider web from inside of CHP-1 sun shader at</p>
 <p>05:52 UTC</p>
 </div>
