--- a/JOURNAL/Journal.html
+++ b/JOURNAL/Journal.html
@@ -644,7 +644,12 @@ id="thanasisn-91">2023-04-19 09:19 [ThanasisN]</h2>
 window at</p>
 <p>08:26 - 08:30 UTC</p>
 <p>Also, instrument enclosure was sprayed with penetrating oil to deter
-insects.</p>
+insects.</p><h2 id="section-9">2023-10-25 09:22</h2>
+<p>Tracker is not tracking from yesterday.</p>
+<p>Reset it today. Tried to find zero, but failed and continue trying
+forever.</p>
+<p>Stop it reconnected, and now can not communicate with the control
+unit</p>
 </div>
 <hr />
 <h1 id="journal-instructions">Journal instructions</h1>
@@ -699,6 +704,8 @@ entries files</h2>
   6 #error
   2 #inclined
   7 #katastroph
+  1 #key_1
+  1 #key_2
   5 #leveling
   1 #mounting
   2 #panic
