--- a/JOURNAL/Journal.html
+++ b/JOURNAL/Journal.html
@@ -649,7 +649,9 @@ insects.</p><h2 id="section-9">2023-10-25 09:22</h2>
 <p>Reset it today. Tried to find zero, but failed and continue trying
 forever.</p>
 <p>Stop it reconnected, and now can not communicate with the control
-unit</p>
+unit</p><h2 id="section-10">2023-10-26 11:20</h2>
+<p>We replaced 2 failed capacitors. Re install the board. But still
+there is no communication with the tracker</p>
 </div>
 <hr />
 <h1 id="journal-instructions">Journal instructions</h1>
@@ -704,8 +706,8 @@ entries files</h2>
   6 #error
   2 #inclined
   7 #katastroph
-  1 #key_1
-  1 #key_2
+  2 #key_1
+  2 #key_2
   5 #leveling
   1 #mounting
   2 #panic
