--- a/JOURNAL/Journal.html
+++ b/JOURNAL/Journal.html
@@ -644,14 +644,17 @@ id="thanasisn-91">2023-04-19 09:19 [ThanasisN]</h2>
 window at</p>
 <p>08:26 - 08:30 UTC</p>
 <p>Also, instrument enclosure was sprayed with penetrating oil to deter
-insects.</p><h2 id="section-9">2023-10-25 09:22</h2>
+insects.</p><h2 id="thanasisn-95">2023-10-25 09:22 [ThanasisN]</h2>
 <p>Tracker is not tracking from yesterday.</p>
 <p>Reset it today. Tried to find zero, but failed and continue trying
 forever.</p>
 <p>Stop it reconnected, and now can not communicate with the control
-unit</p><h2 id="section-10">2023-10-26 11:20</h2>
+unit</p><h2 id="thanasisn-96">2023-10-26 11:20 [ThanasisN]</h2>
 <p>We replaced 2 failed capacitors. Re install the board. But still
-there is no communication with the tracker</p>
+there is no communication with the tracker</p><h2
+id="thanasisn-97">2023-10-30 13:54 [ThanasisN]</h2>
+<p>CHP-1 tracker still not working. Possible a faulty transistor. Will
+replace tomorrow.</p>
 </div>
 <hr />
 <h1 id="journal-instructions">Journal instructions</h1>
@@ -694,7 +697,7 @@ entries files</h2>
   1 #brewers
   2 #broadband
   1 #ccd
- 54 #chp1
+ 56 #chp1
   1 #cleaned
  16 #cleaning
  12 #cm21
@@ -706,12 +709,12 @@ entries files</h2>
   6 #error
   2 #inclined
   7 #katastroph
-  2 #key_1
-  2 #key_2
+  1 #key_1
+  1 #key_2
   5 #leveling
   1 #mounting
   2 #panic
-  5 #problem
+  7 #problem
   2 #pysolar
   2 #radmon
   1 #radmon_reboot
@@ -721,7 +724,7 @@ entries files</h2>
   1 #sync
   1 #temp
   1 #test
-  8 #tracker
+ 10 #tracker
  20 #tracker2
   1 #works</code></pre>                    
                 </div>
