--- a/JOURNAL/Journal.html
+++ b/JOURNAL/Journal.html
@@ -654,7 +654,11 @@ unit</p><h2 id="thanasisn-96">2023-10-26 11:20 [ThanasisN]</h2>
 there is no communication with the tracker</p><h2
 id="thanasisn-97">2023-10-30 13:54 [ThanasisN]</h2>
 <p>CHP-1 tracker still not working. Possible a faulty transistor. Will
-replace tomorrow.</p>
+replace tomorrow.</p><h2 id="thanasisn-98">2023-10-31 09:59
+[ThanasisN]</h2>
+<p>Transistor was replaced,</p>
+<p>We can communicate with the controller.</p>
+<p>Although, the Azimuth channel is not working.</p>
 </div>
 <hr />
 <h1 id="journal-instructions">Journal instructions</h1>
@@ -697,7 +701,7 @@ entries files</h2>
   1 #brewers
   2 #broadband
   1 #ccd
- 56 #chp1
+ 57 #chp1
   1 #cleaned
  16 #cleaning
  12 #cm21
@@ -714,7 +718,7 @@ entries files</h2>
   5 #leveling
   1 #mounting
   2 #panic
-  7 #problem
+  8 #problem
   2 #pysolar
   2 #radmon
   1 #radmon_reboot
@@ -724,7 +728,7 @@ entries files</h2>
   1 #sync
   1 #temp
   1 #test
- 10 #tracker
+ 11 #tracker
  20 #tracker2
   1 #works</code></pre>                    
                 </div>
