--- a/JOURNAL/Journal.html
+++ b/JOURNAL/Journal.html
@@ -658,7 +658,10 @@ replace tomorrow.</p><h2 id="thanasisn-98">2023-10-31 09:59
 [ThanasisN]</h2>
 <p>Transistor was replaced,</p>
 <p>We can communicate with the controller.</p>
-<p>Although, the Azimuth channel is not working.</p>
+<p>Although, the Azimuth channel is not working.</p><h2
+id="thanasisn-99">2023-11-02 11:13 [ThanasisN]</h2>
+<p>Tracker is still down.</p>
+<p>Send for service.</p>
 </div>
 <hr />
 <h1 id="journal-instructions">Journal instructions</h1>
@@ -701,7 +704,7 @@ entries files</h2>
   1 #brewers
   2 #broadband
   1 #ccd
- 57 #chp1
+ 58 #chp1
   1 #cleaned
  16 #cleaning
  12 #cm21
@@ -718,7 +721,7 @@ entries files</h2>
   5 #leveling
   1 #mounting
   2 #panic
-  8 #problem
+  9 #problem
   2 #pysolar
   2 #radmon
   1 #radmon_reboot
@@ -728,7 +731,7 @@ entries files</h2>
   1 #sync
   1 #temp
   1 #test
- 11 #tracker
+ 12 #tracker
  20 #tracker2
   1 #works</code></pre>                    
                 </div>
