--- a/JOURNAL/Journal.html
+++ b/JOURNAL/Journal.html
@@ -661,7 +661,12 @@ replace tomorrow.</p><h2 id="thanasisn-98">2023-10-31 09:59
 <p>Although, the Azimuth channel is not working.</p><h2
 id="thanasisn-99">2023-11-02 11:13 [ThanasisN]</h2>
 <p>Tracker is still down.</p>
-<p>Send for service.</p>
+<p>Send for service.</p><h2 id="thanasisn-100">2023-11-06 12:30
+[ThanasisN]</h2>
+<p>Tracker was installed, measurement have started!</p>
+<p>Leveling, sighting, window cleaning and replacing of silica gel was
+done.</p>
+<p>The tracker had a burned out microcontroller.</p>
 </div>
 <hr />
 <h1 id="journal-instructions">Journal instructions</h1>
@@ -704,7 +709,7 @@ entries files</h2>
   1 #brewers
   2 #broadband
   1 #ccd
- 58 #chp1
+ 59 #chp1
   1 #cleaned
  16 #cleaning
  12 #cm21
@@ -731,7 +736,7 @@ entries files</h2>
   1 #sync
   1 #temp
   1 #test
- 12 #tracker
+ 13 #tracker
  20 #tracker2
   1 #works</code></pre>                    
                 </div>
