--- a/JOURNAL/Journal.html
+++ b/JOURNAL/Journal.html
@@ -258,6 +258,7 @@ style="column-count: 2 ;; column-gap: 4em ;; column-rule: 1px solid black ;">
 <ul>
 <li><a href="#2024-01-25-1305-eet-thanasisn">2024-01-25 13:05 EET
 [ThanasisN]</a></li>
+<li><a href="#2024-01-26-thanasisn">2024-01-26 [ThanasisN]</a></li>
 </ul></li>
 <li><a href="#journal-instructions">Journal instructions</a>
 <ul>
@@ -271,7 +272,7 @@ numerical sorted</a></li>
 document entries files</a></li>
 </ul></li>
 <li><a href="#list-of-tags">List of tags</a></li>
-</ul><!-- Created by https://github.com/ekalinin/github-markdown-toc --><!-- Added by: athan, at: Thu Jan 25 01:20:04 PM EET 2024 --><!--te-->
+</ul><!-- Created by https://github.com/ekalinin/github-markdown-toc --><!-- Added by: athan, at: Fri Jan 26 06:00:05 PM EET 2024 --><!--te-->
 </div>
 <hr />
 <h1 id="section">1996</h1>
@@ -838,7 +839,12 @@ style="column-count: 2 ;; column-gap: 4em ;; column-rule: 1px solid black ;">
 <h2 id="eet-thanasisn">2024-01-25 13:05 EET [ThanasisN]</h2>
 <p>Cleaning of broadband and brewers windows at :</p>
 <p>13:02 - 13:03 LT</p>
-<p>11:02 - 11:03 LT</p>
+<p>11:02 - 11:03 LT</p><h2 id="thanasisn-102">2024-01-26
+[ThanasisN]</h2>
+<p>Today morning the radmon was found stacked on on startup screen with
+a message that prevent it to run normally.</p>
+<p>After the message was cleared, it start operation.</p>
+<p>Probably was frozen fro yesterday.</p>
 </div>
 <hr />
 <h1 id="journal-instructions">Journal instructions</h1>
