--- a/JOURNAL/Journal.html
+++ b/JOURNAL/Journal.html
@@ -223,6 +223,7 @@ style="column-count: 2 ;; column-gap: 4em ;; column-rule: 1px solid black ;">
 </ul></li>
 <li><a href="#2023">2023</a>
 <ul>
+<li><a href="#2023-09-11-0610-eest">2023-09-11 06:10 EEST</a></li>
 <li><a href="#2023-03-28-1548-thanasisn">2023-03-28 15:48
 [ThanasisN]</a></li>
 <li><a href="#2023-03-28-1731-thanasisn">2023-03-28 17:31
@@ -249,8 +250,10 @@ style="column-count: 2 ;; column-gap: 4em ;; column-rule: 1px solid black ;">
 [ThanasisN]</a></li>
 <li><a href="#2023-11-02-1113-thanasisn">2023-11-02 11:13
 [ThanasisN]</a></li>
+<li><a href="#tags-------chp1-tracker-">tags: [ chp1 tracker ]</a></li>
 <li><a href="#2023-11-06-1230-thanasisn">2023-11-06 12:30
 [ThanasisN]</a></li>
+<li><a href="#tags-------chp1-problem-">tags: [ chp1 problem ]</a></li>
 <li><a href="#2023-11-07-1100-thanasisn">2023-11-07 11:00
 [ThanasisN]</a></li>
 </ul></li>
@@ -272,7 +275,8 @@ numerical sorted</a></li>
 document entries files</a></li>
 </ul></li>
 <li><a href="#list-of-tags">List of tags</a></li>
-</ul><!-- Created by https://github.com/ekalinin/github-markdown-toc --><!-- Added by: athan, at: Fri Jan 26 06:00:05 PM EET 2024 --><!--te-->
+<li><a href="#new-list-of-tags">New List of tags</a></li>
+</ul><!-- Created by https://github.com/ekalinin/github-markdown-toc --><!-- Added by: athan, at: Fri Jan 26 08:00:05 PM EET 2024 --><!--te-->
 </div>
 <hr />
 <h1 id="section">1996</h1>
@@ -765,7 +769,8 @@ horizontal.</p>
 <h1 id="section-8">2023</h1>
 <div class="columns"
 style="column-count: 2 ;; column-gap: 4em ;; column-rule: 1px solid black ;">
-<h2 id="thanasisn-87">2023-03-28 15:48 [ThanasisN]</h2>
+<h2 id="eest">2023-09-11 06:10 EEST</h2><h2 id="thanasisn-87">2023-03-28
+15:48 [ThanasisN]</h2>
 <p>We removed some Global radiation data output constrains.</p>
 <p>Now we allowed:</p>
 <ul>
@@ -844,7 +849,7 @@ style="column-count: 2 ;; column-gap: 4em ;; column-rule: 1px solid black ;">
 <p>Today morning the radmon was found stacked on on startup screen with
 a message that prevent it to run normally.</p>
 <p>After the message was cleared, it start operation.</p>
-<p>Probably was frozen fro yesterday.</p>
+<p>Probably was frozen from yesterday.</p>
 </div>
 <hr />
 <h1 id="journal-instructions">Journal instructions</h1>
@@ -887,7 +892,7 @@ entries files</h2>
   1 #brewers
   2 #broadband
   1 #ccd
- 60 #chp1
+ 58 #chp1
   1 #cleaned
  16 #cleaning
  12 #cm21
@@ -904,7 +909,7 @@ entries files</h2>
   5 #leveling
   1 #mounting
   2 #panic
- 10 #problem
+  9 #problem
   2 #pysolar
   2 #radmon
   1 #radmon_reboot
@@ -914,9 +919,16 @@ entries files</h2>
   1 #sync
   1 #temp
   1 #test
- 13 #tracker
+ 12 #tracker
  20 #tracker2
-  1 #works</code></pre>                    
+  1 #works</code></pre>
+<h1 id="new-list-of-tags">New List of tags</h1>
+<pre><code>  1 broadband
+  2 chp1
+  1 cleaning
+  2 problem
+  1 radmon
+  1 tracker</code></pre>                    
                 </div>
             </div>
             <script src="https://vjs.zencdn.net/5.4.4/video.js"></script>
