--- a/JOURNAL/Journal.html
+++ b/JOURNAL/Journal.html
@@ -223,11 +223,21 @@ style="column-count: 2 ;; column-gap: 4em ;; column-rule: 1px solid black ;">
 </ul></li>
 <li><a href="#2023">2023</a>
 <ul>
-<li><a href="#2023-09-11-0610-eest">2023-09-11 06:10 EEST</a></li>
+<li><a href="#2023-09-11-0610-utc-thanasisn">2023-09-11 06:10 UTC
+[ThanasisN]</a></li>
+<li><a href="#tags-------chp1-tracker-">tags: [ chp1 tracker ]</a></li>
+<li><a href="#2023-11-06-1230-thanasisn">2023-11-06 12:30
+[ThanasisN]</a></li>
+<li><a href="#tags-------chp1-problem-">tags: [ chp1 problem ]</a></li>
+<li><a href="#2023-11-07-1100-thanasisn">2023-11-07 11:00
+[ThanasisN]</a></li>
+<li><a href="#tags--cm21-">tags: [ cm21 ]</a></li>
 <li><a href="#2023-03-28-1548-thanasisn">2023-03-28 15:48
 [ThanasisN]</a></li>
+<li><a href="#tags--cm21--1">tags: [ cm21 ]</a></li>
 <li><a href="#2023-03-28-1731-thanasisn">2023-03-28 17:31
 [ThanasisN]</a></li>
+<li><a href="#tags---problem-radmon-">tags: [ problem radmon ]</a></li>
 <li><a href="#2023-04-03-0914-thanasisn">2023-04-03 09:14
 [ThanasisN]</a></li>
 <li><a href="#2023-04-04-1259-thanasisn">2023-04-04 12:59
@@ -250,12 +260,6 @@ style="column-count: 2 ;; column-gap: 4em ;; column-rule: 1px solid black ;">
 [ThanasisN]</a></li>
 <li><a href="#2023-11-02-1113-thanasisn">2023-11-02 11:13
 [ThanasisN]</a></li>
-<li><a href="#tags-------chp1-tracker-">tags: [ chp1 tracker ]</a></li>
-<li><a href="#2023-11-06-1230-thanasisn">2023-11-06 12:30
-[ThanasisN]</a></li>
-<li><a href="#tags-------chp1-problem-">tags: [ chp1 problem ]</a></li>
-<li><a href="#2023-11-07-1100-thanasisn">2023-11-07 11:00
-[ThanasisN]</a></li>
 </ul></li>
 <li><a href="#2024">2024</a>
 <ul>
@@ -276,7 +280,7 @@ document entries files</a></li>
 </ul></li>
 <li><a href="#list-of-tags">List of tags</a></li>
 <li><a href="#new-list-of-tags">New List of tags</a></li>
-</ul><!-- Created by https://github.com/ekalinin/github-markdown-toc --><!-- Added by: athan, at: Fri Jan 26 08:00:05 PM EET 2024 --><!--te-->
+</ul><!-- Created by https://github.com/ekalinin/github-markdown-toc --><!-- Added by: athan, at: Fri Jan 26 08:40:05 PM EET 2024 --><!--te-->
 </div>
 <hr />
 <h1 id="section">1996</h1>
@@ -769,8 +773,23 @@ horizontal.</p>
 <h1 id="section-8">2023</h1>
 <div class="columns"
 style="column-count: 2 ;; column-gap: 4em ;; column-rule: 1px solid black ;">
-<h2 id="eest">2023-09-11 06:10 EEST</h2><h2 id="thanasisn-87">2023-03-28
-15:48 [ThanasisN]</h2>
+<h2 id="utc-thanasisn">2023-09-11 06:10 UTC [ThanasisN]</h2>
+<p>CHP-1 was cleaned!</p>
+<p>Window was very dirty, and that created a jump in the
+measurements!!</p><h2 id="thanasisn-87">2023-11-06 12:30
+[ThanasisN]</h2>
+<p>Tracker was installed, measurement have started!</p>
+<p>Leveling, sighting, window cleaning and replacing of silica gel was
+done.</p>
+<p>The tracker had a burned out microcontroller.</p><h2
+id="thanasisn-88">2023-11-07 11:00 [ThanasisN]</h2>
+<p>The CHP-1 was removed to fix a problem with the silica gel
+compartment.</p>
+<p>The instrument was taken to a metal workshop where the threads of the
+body and the silica gel compartment were altered.</p>
+<p>It was installed, with new silica gel.</p>
+<p>The tracker was checked and was level.</p><h2
+id="thanasisn-89">2023-03-28 15:48 [ThanasisN]</h2>
 <p>We removed some Global radiation data output constrains.</p>
 <p>Now we allowed:</p>
 <ul>
@@ -778,65 +797,53 @@ style="column-count: 2 ;; column-gap: 4em ;; column-rule: 1px solid black ;">
 <li>Negative values during day (it was set to zero)</li>
 </ul>
 <p>Will update all sirena data for years 2006-2022, previous exported by
-us.</p><h2 id="thanasisn-88">2023-03-28 17:31 [ThanasisN]</h2>
+us.</p><h2 id="thanasisn-90">2023-03-28 17:31 [ThanasisN]</h2>
 <p>Sirena TOT files updated for 2006-2022.</p>
-<p>With the new output scheme.</p><h2 id="thanasisn-89">2023-04-03 09:14
+<p>With the new output scheme.</p><h2 id="thanasisn-91">2023-04-03 09:14
 [ThanasisN]</h2>
-<p>Radmon found freezed with different system errors.</p>
+<p>Radmon found frizzed with different system errors.</p>
 <p>No tracking with CHP-1 at start of the day. Day is cloudy.</p>
 <p>Reboot seems to fixed the problem.</p><h2
-id="thanasisn-90">2023-04-04 12:59 [ThanasisN]</h2>
+id="thanasisn-92">2023-04-04 12:59 [ThanasisN]</h2>
 <p>The tracker didn’t start at the morning due to an error of the
 <code>com port</code>.</p>
 <p>Tracker program was restarted manual.</p><h2
-id="thanasisn-91">2023-04-19 09:19 [ThanasisN]</h2>
+id="thanasisn-93">2023-04-19 09:19 [ThanasisN]</h2>
 <p>The tracker didn’t start normally today.</p>
 <dl>
 <dt>I restart it manual at</dt>
 <dd>
 <p>09:10 LT</p>
 </dd>
-</dl><h2 id="thanasisn-92">2023-05-18 09:15 [ThanasisN]</h2>
+</dl><h2 id="thanasisn-94">2023-05-18 09:15 [ThanasisN]</h2>
 <p>Cleaned broadband and brewers instruments at</p>
 <p>06:07 - 06:10 UTC</p>
-<p>A lot of dust from previous rain.</p><h2 id="thanasisn-93">2023-05-25
+<p>A lot of dust from previous rain.</p><h2 id="thanasisn-95">2023-05-25
 08:52 [ThanasisN]</h2>
 <p>Clean spider web from inside of CHP-1 sun shader at</p>
-<p>05:52 UTC</p><h2 id="thanasisn-94">2023-06-26 11:26 [ThanasisN]</h2>
+<p>05:52 UTC</p><h2 id="thanasisn-96">2023-06-26 11:26 [ThanasisN]</h2>
 <p>CHP-1 was cleaned from spider webs, in frond off the instrument
 window at</p>
 <p>08:26 - 08:30 UTC</p>
 <p>Also, instrument enclosure was sprayed with penetrating oil to deter
-insects.</p><h2 id="thanasisn-95">2023-10-25 09:22 [ThanasisN]</h2>
+insects.</p><h2 id="thanasisn-97">2023-10-25 09:22 [ThanasisN]</h2>
 <p>Tracker is not tracking from yesterday.</p>
 <p>Reset it today. Tried to find zero, but failed and continue trying
 forever.</p>
 <p>Stop it reconnected, and now can not communicate with the control
-unit</p><h2 id="thanasisn-96">2023-10-26 11:20 [ThanasisN]</h2>
+unit</p><h2 id="thanasisn-98">2023-10-26 11:20 [ThanasisN]</h2>
 <p>We replaced 2 failed capacitors. Re install the board. But still
 there is no communication with the tracker</p><h2
-id="thanasisn-97">2023-10-30 13:54 [ThanasisN]</h2>
+id="thanasisn-99">2023-10-30 13:54 [ThanasisN]</h2>
 <p>CHP-1 tracker still not working. Possible a faulty transistor. Will
-replace tomorrow.</p><h2 id="thanasisn-98">2023-10-31 09:59
+replace tomorrow.</p><h2 id="thanasisn-100">2023-10-31 09:59
 [ThanasisN]</h2>
 <p>Transistor was replaced,</p>
 <p>We can communicate with the controller.</p>
 <p>Although, the Azimuth channel is not working.</p><h2
-id="thanasisn-99">2023-11-02 11:13 [ThanasisN]</h2>
+id="thanasisn-101">2023-11-02 11:13 [ThanasisN]</h2>
 <p>Tracker is still down.</p>
-<p>Send for service.</p><h2 id="thanasisn-100">2023-11-06 12:30
-[ThanasisN]</h2>
-<p>Tracker was installed, measurement have started!</p>
-<p>Leveling, sighting, window cleaning and replacing of silica gel was
-done.</p>
-<p>The tracker had a burned out microcontroller.</p><h2
-id="thanasisn-101">2023-11-07 11:00 [ThanasisN]</h2>
-<p>The CHP-1 was removed to fix a problem with the silica gel
-compartment.</p>
-<p>The instrument was taken to a metal workshop where the threads of the
-body and the silica gel compartment were altered.</p>
-<p>It was installed, with new silica gel.</p>
-<p>The tracker was checked and was level.</p>
+<p>Send for service.</p>
 </div>
 <h1 id="section-9">2024</h1>
 <div class="columns"
@@ -895,7 +902,7 @@ entries files</h2>
  58 #chp1
   1 #cleaned
  16 #cleaning
- 12 #cm21
+ 10 #cm21
   2 #codding
   3 #data_corruption_certain
   1 #data_format_change
@@ -909,9 +916,9 @@ entries files</h2>
   5 #leveling
   1 #mounting
   2 #panic
-  9 #problem
+  8 #problem
   2 #pysolar
-  2 #radmon
+  1 #radmon
   1 #radmon_reboot
   6 #silica
   2 #sun_vector
@@ -924,10 +931,14 @@ entries files</h2>
   1 #works</code></pre>
 <h1 id="new-list-of-tags">New List of tags</h1>
 <pre><code>  1 broadband
-  2 chp1
-  1 cleaning
-  2 problem
-  1 radmon
+  3 chp1
+  2 cleaning
+  2 cm21
+  1 data_loss
+  1 error
+  4 problem
+  2 radmon
+  1 suspicious_data
   1 tracker</code></pre>                    
                 </div>
             </div>
