--- a/JOURNAL/Journal.html
+++ b/JOURNAL/Journal.html
@@ -324,7 +324,7 @@ document entries files</a></li>
 </ul></li>
 <li><a href="#list-of-tags">List of tags</a></li>
 <li><a href="#new-list-of-tags">New List of tags</a></li>
-</ul><!-- Created by https://github.com/ekalinin/github-markdown-toc --><!-- Added by: athan, at: Σαβ 27 Ιαν 2024 12:17:33 μμ EET --><!--te-->
+</ul><!-- Created by https://github.com/ekalinin/github-markdown-toc --><!-- Added by: athan, at: Δευ 29 Ιαν 2024 10:17:07 πμ EET --><!--te-->
 </div>
 <hr />
 <h1 id="section">1996</h1>
@@ -835,7 +835,7 @@ us.</p><h2 id="thanasisn-88">2023-03-28 17:31 [ThanasisN]</h2>
 <p>Sirena TOT files updated for 2006-2022.</p>
 <p>With the new output scheme.</p><h2 id="thanasisn-89">2023-04-03 09:14
 [ThanasisN]</h2>
-<p>Radmon found frizzed with different system errors.</p>
+<p>Radmon found frozen with different system errors.</p>
 <p>No tracking with CHP-1 at start of the day. Day is cloudy.</p>
 <p>Reboot seems to fixed the problem.</p><h2
 id="thanasisn-90">2023-04-04 12:59 [ThanasisN]</h2>
