--- a/JOURNAL/Journal.html
+++ b/JOURNAL/Journal.html
@@ -275,7 +275,7 @@ document entries files</a></li>
 </ul></li>
 <li><a href="#list-of-tags">List of tags</a></li>
 <li><a href="#new-list-of-tags">New List of tags</a></li>
-</ul><!-- Created by https://github.com/ekalinin/github-markdown-toc --><!-- Added by: athan, at: Mon Jan 29 12:20:04 PM EET 2024 --><!--te-->
+</ul><!-- Created by https://github.com/ekalinin/github-markdown-toc --><!-- Added by: athan, at: Δευ 29 Ιαν 2024 01:17:10 μμ EET --><!--te-->
 </div>
 <hr />
 <h1 id="section">1996</h1>
@@ -582,7 +582,7 @@ id="thanasisn-57">2018-03-23 11:36 [ThanasisN]</h2>
 occurring.</p>
 <p>Instruments domes are regular covered with thick dust.</p>
 <p>Dome Cleaning</p>
-<p>11:36 - 11:39 local time</p>
+<p>11:36 - 11:39 LT</p>
 <p>09:36 - 09:39 UTC</p><h2 id="thanasisn-58">2018-04-12 08:35
 [ThanasisN]</h2>
 <p>Domes cleaned at</p>
@@ -608,8 +608,8 @@ id="thanasisn-62">2018-12-07 [ThanasisN]</h2>
 <li>Sighting</li>
 </ul>
 <p>Was completed at</p>
-<p>10:56 local time</p>
-<p>8:56 UTC</p>
+<p>10:56 LT</p>
+<p>08:56 UTC</p>
 </div>
 <h1 id="section-5">2019</h1>
 <div class="columns"
@@ -898,25 +898,25 @@ entries files</h2>
 <p>At least you need <code>pandoc</code> installed.</p>
 <h1 id="list-of-tags">List of tags</h1>
 <pre><code>  5 #async
- 43 #chp1
-  5 #cleaning
+ 40 #chp1
+  1 #cleaning
   5 #cm21
   2 #codding
-  3 #data_corruption_certain
+  2 #data_corruption_certain
   1 #data_format_change
- 28 #data_loss
-  3 #down_time
+ 27 #data_loss
+  1 #down_time
   3 #error
-  5 #katastroph
-  4 #leveling
+  4 #katastroph
+  2 #leveling
   1 #mounting
   2 #panic
   4 #problem
   2 #pysolar
   1 #radmon_reboot
-  5 #silica
+  4 #silica
   2 #sun_vector
- 10 #suspicious_data
+  7 #suspicious_data
   1 #sync
   1 #temp
   6 #tracker
@@ -925,19 +925,21 @@ entries files</h2>
 <pre><code>  1 brewers
   4 broadband
   1 ccd
- 22 chp1
- 13 cleaning
+ 27 chp1
+ 17 cleaning
   9 cm21
-  8 data_loss
+  1 data_corruption_certain
+  9 data_loss
+  2 down_time
   4 error
   1 INCcm21
   2 inclined
-  2 leveling
- 12 problem
-  4 radmon
-  2 sighting
-  2 silica
-  1 suspicious_data
+  4 leveling
+ 13 problem
+  6 radmon
+  3 sighting
+  3 silica
+  4 suspicious_data
   1 test
   8 tracker
   1 works</code></pre>                    
