--- a/JOURNAL/Journal.html
+++ b/JOURNAL/Journal.html
@@ -275,7 +275,7 @@ document entries files</a></li>
 </ul></li>
 <li><a href="#list-of-tags">List of tags</a></li>
 <li><a href="#new-list-of-tags">New List of tags</a></li>
-</ul><!-- Created by https://github.com/ekalinin/github-markdown-toc --><!-- Added by: athan, at: Δευ 29 Ιαν 2024 01:17:10 μμ EET --><!--te-->
+</ul><!-- Created by https://github.com/ekalinin/github-markdown-toc --><!-- Added by: athan, at: Wed Jan 31 12:00:08 PM EET 2024 --><!--te-->
 </div>
 <hr />
 <h1 id="section">1996</h1>
@@ -848,7 +848,7 @@ style="column-count: 2 ;; column-gap: 4em ;; column-rule: 1px solid black ;">
 <h2 id="eet-thanasisn">2024-01-25 13:05 EET [ThanasisN]</h2>
 <p>Cleaning of broadband and brewers windows at :</p>
 <p>13:02 - 13:03 LT</p>
-<p>11:02 - 11:03 LT</p><h2 id="thanasisn-102">2024-01-26
+<p>11:02 - 11:03 UTC</p><h2 id="thanasisn-102">2024-01-26
 [ThanasisN]</h2>
 <p>Today morning the radmon was found stacked on on startup screen with
 a message that prevent it to run normally.</p>
