--- a/JOURNAL/Journal.html
+++ b/JOURNAL/Journal.html
@@ -261,6 +261,7 @@ style="column-count: 2 ;; column-gap: 4em ;; column-rule: 1px solid black ;">
 <li><a href="#2024-01-25-1305-eet-thanasisn">2024-01-25 13:05 EET
 [ThanasisN]</a></li>
 <li><a href="#2024-01-26-thanasisn">2024-01-26 [ThanasisN]</a></li>
+<li><a href="#2024-02-02-1628-eet">2024-02-02 16:28 EET</a></li>
 </ul></li>
 <li><a href="#journal-instructions">Journal instructions</a>
 <ul>
@@ -275,7 +276,7 @@ document entries files</a></li>
 </ul></li>
 <li><a href="#list-of-tags">List of tags</a></li>
 <li><a href="#new-list-of-tags">New List of tags</a></li>
-</ul><!-- Created by https://github.com/ekalinin/github-markdown-toc --><!-- Added by: athan, at: Wed Jan 31 12:00:08 PM EET 2024 --><!--te-->
+</ul><!-- Created by https://github.com/ekalinin/github-markdown-toc --><!-- Added by: athan, at: Fri Feb  2 04:40:04 PM EET 2024 --><!--te-->
 </div>
 <hr />
 <h1 id="section">1996</h1>
@@ -853,7 +854,8 @@ style="column-count: 2 ;; column-gap: 4em ;; column-rule: 1px solid black ;">
 <p>Today morning the radmon was found stacked on on startup screen with
 a message that prevent it to run normally.</p>
 <p>After the message was cleared, it start operation.</p>
-<p>Probably was frozen from yesterday.</p>
+<p>Probably was frozen from yesterday.</p><h2 id="eet">2024-02-02 16:28
+EET</h2>
 </div>
 <hr />
 <h1 id="journal-instructions">Journal instructions</h1>
