--- a/JOURNAL/Journal.html
+++ b/JOURNAL/Journal.html
@@ -121,6 +121,8 @@ style="column-count: 2 ;; column-gap: 4em ;; column-rule: 1px solid black ;">
 <li><a href="#2017">2017</a>
 <ul>
 <li><a href="#2017-01-10-thanasisn">2017-01-10 [ThanasisN]</a></li>
+<li><a href="#2017-12-25-thanasisn">2017-12-25 [ThanasisN]</a></li>
+<li><a href="#2017-12-26-thanasisn">2017-12-26 [ThanasisN]</a></li>
 <li><a href="#2017-01-11-thanasisn">2017-01-11 [ThanasisN]</a></li>
 <li><a href="#2017-01-12-thanasisn">2017-01-12 [ThanasisN]</a></li>
 <li><a href="#2017-01-19-thanasisn">2017-01-19 [ThanasisN]</a></li>
@@ -151,8 +153,6 @@ style="column-count: 2 ;; column-gap: 4em ;; column-rule: 1px solid black ;">
 <li><a href="#2017-12-15-thanasisn">2017-12-15 [ThanasisN]</a></li>
 <li><a href="#2017-12-18-1004-thanasisn">2017-12-18 10:04
 [ThanasisN]</a></li>
-<li><a href="#2017-12-25-thanasisn">2017-12-25 [ThanasisN]</a></li>
-<li><a href="#2017-12-26-thanasisn">2017-12-26 [ThanasisN]</a></li>
 </ul></li>
 <li><a href="#2018">2018</a>
 <ul>
@@ -276,7 +276,7 @@ document entries files</a></li>
 </ul></li>
 <li><a href="#list-of-tags">List of tags</a></li>
 <li><a href="#new-list-of-tags">New List of tags</a></li>
-</ul><!-- Created by https://github.com/ekalinin/github-markdown-toc --><!-- Added by: athan, at: Fri Feb  2 04:40:04 PM EET 2024 --><!--te-->
+</ul><!-- Created by https://github.com/ekalinin/github-markdown-toc --><!-- Added by: athan, at: Fri Feb 16 07:40:04 PM EET 2024 --><!--te-->
 </div>
 <hr />
 <h1 id="section">1996</h1>
@@ -434,9 +434,15 @@ continuously very accurate!!</p><h2 id="thanasisn-29">2016-09-23
 style="column-count: 2 ;; column-gap: 4em ;; column-rule: 1px solid black ;">
 <h2 id="thanasisn-31">2017-01-10 [ThanasisN]</h2>
 <p>Snowfall, instruments probably covered by the snow.</p><h2
-id="thanasisn-32">2017-01-11 [ThanasisN]</h2>
+id="thanasisn-32">2017-12-25 [ThanasisN]</h2>
+<p>Async and step data shows that tracker is not working.</p>
+<p>The signal from CHP-1 is zero!!</p>
+<p>Will exclude direct data from analysis.</p><h2
+id="thanasisn-33">2017-12-26 [ThanasisN]</h2>
+<p>Tracker start working by itself probably!</p><h2
+id="thanasisn-34">2017-01-11 [ThanasisN]</h2>
 <p>Snowfall, instruments probably covered by the snow.</p><h2
-id="thanasisn-33">2017-01-12 [ThanasisN]</h2>
+id="thanasisn-35">2017-01-12 [ThanasisN]</h2>
 <p><span class="citation" data-cites="cm21">@cm21</span></p>
 <p>Today is sunny.</p>
 <p>Instruments domes had some ice on top (there are photos), early in
@@ -446,7 +452,7 @@ the day.</p>
 <dd>
 <p>07:52 UTC</p>
 </dd>
-</dl><h2 id="thanasisn-34">2017-01-19 [ThanasisN]</h2>
+</dl><h2 id="thanasisn-36">2017-01-19 [ThanasisN]</h2>
 <p>About 16:40 tests for better night park position</p>
 <p>radmon pc crashed</p>
 <dl>
@@ -459,30 +465,30 @@ the day.</p>
 <pre><code>stepz = 4250,
 stepa = 5365</code></pre>
 <p>Now it looks directly to the white wall of the building almost
-vertical</p><h2 id="thanasisn-35">2017-02-22 [ThanasisN]</h2>
+vertical</p><h2 id="thanasisn-37">2017-02-22 [ThanasisN]</h2>
 <p>Ένα πουλί κάθισε στο όργανο και το κούνησε.</p>
 <p>Τα παιδιά το γύρισαν ξανά.</p>
-<p>Μετά έκανα reset από απόσταση.</p><h2 id="thanasisn-36">2017-03-03
+<p>Μετά έκανα reset από απόσταση.</p><h2 id="thanasisn-38">2017-03-03
 12:39 [ThanasisN]</h2>
 <p>Replace silica gel at</p>
-<p>12:39 - 12:45 ?</p><h2 id="thanasisn-37">2017-05-04 09:30
+<p>12:39 - 12:45 ?</p><h2 id="thanasisn-39">2017-05-04 09:30
 [ThanasisN]</h2>
 <p>Tracker found not in sync with the sun at</p>
 <p>6:30 UTC</p>
 <p>Reset was done and the problem was fixed.</p><h2
-id="thanasisn-38">2017-07-12 09:34 [ThanasisN]</h2>
+id="thanasisn-40">2017-07-12 09:34 [ThanasisN]</h2>
 <dl>
 <dt>Cleaning of Instruments domes.</dt>
 <dd>
 <p>02:02 - 02:03</p>
 </dd>
 </dl>
-<p>The day is shining.</p><h2 id="thanasisn-39">2017-08-09
+<p>The day is shining.</p><h2 id="thanasisn-41">2017-08-09
 [ThanasisN]</h2>
 <p>CHP-1 has some strange step up in data not according to global or
 photos.</p>
 <p>Also CHP-1 standard deviation seems to be affected.</p><h2
-id="thanasisn-40">2017-08-15 [ThanasisN]</h2>
+id="thanasisn-42">2017-08-15 [ThanasisN]</h2>
 <p>Data from CHP-1 show no sun in contrast with global.</p>
 <p>Tracker was stack.</p>
 <p>Logs from previous day stop at 20:30 not at 20:50 as for all other
@@ -492,7 +498,7 @@ days</p>
 <dd>
 <p>09:13 - 9:15</p>
 </dd>
-</dl><h2 id="thanasisn-41">2017-08-16 [ThanasisN]</h2>
+</dl><h2 id="thanasisn-43">2017-08-16 [ThanasisN]</h2>
 <p><strong>Tracker found to be on park location.</strong></p>
 <p>Seems like software was freeze.</p>
 <p>Radmon-pc was rebooted -&gt; tracker working properly.</p>
@@ -500,7 +506,7 @@ days</p>
 <p><strong>All BB instruments have bad data!!!!!</strong></p>
 <p>Seems like a step of values before and after reboot!!!</p>
 <p>Maybe normal clouds or something was actually wrong</p><h2
-id="thanasisn-42">2017-08-17 09:45 [ThanasisN]</h2>
+id="thanasisn-44">2017-08-17 09:45 [ThanasisN]</h2>
 <p>Bad data recording for broadband continues.</p>
 <dl>
 <dt>Try reboot at</dt>
@@ -510,12 +516,12 @@ id="thanasisn-42">2017-08-17 09:45 [ThanasisN]</h2>
 </dl>
 <p>Major step on data observed!</p>
 <p>Direct and global seems correct now!</p><h2
-id="thanasisn-43">2017-08-22 [ThanasisN]</h2>
+id="thanasisn-45">2017-08-22 [ThanasisN]</h2>
 <p>Global and direct have some suspicious behavior that can not be
-confirmed by photos.</p><h2 id="thanasisn-44">2017-09-07
+confirmed by photos.</p><h2 id="thanasisn-46">2017-09-07
 [ThanasisN]</h2>
 <p>We did a leveling of the tracker.</p>
-<p>Renew the silica gel on CHP-1.</p><h2 id="thanasisn-45">2017-09-13
+<p>Renew the silica gel on CHP-1.</p><h2 id="thanasisn-47">2017-09-13
 09:10 [ThanasisN]</h2>
 <p>Today tracker found on park position.</p>
 <p>Computer could not run <code>sun_tracker_main</code> from
@@ -523,7 +529,7 @@ schedule.</p>
 <p>It seems, it was stacked and scheduler could not stop it, so it could
 not run it again.</p>
 <p>Reboot was done.</p>
-<p>Problem was solved.</p><h2 id="thanasisn-46">2017-10-02 09:30
+<p>Problem was solved.</p><h2 id="thanasisn-48">2017-10-02 09:30
 [ThanasisN]</h2>
 <p>The step on the tracker was corrected</p>
 <dl>
@@ -534,9 +540,9 @@ not run it again.</p>
 </dl>
 <p><code>0.6 * 12 / 70 = 0.10285714285714284</code></p>
 <p>Cloudy sky prevents sighting for now</p><h2
-id="thanasisn-47">2017-10-09 11:17 [ThanasisN]</h2>
+id="thanasisn-49">2017-10-09 11:17 [ThanasisN]</h2>
 <p>With the previous correction, seems that tracker now performs
-better.</p><h2 id="thanasisn-48">2017-10-30 09:23 [ThanasisN]</h2>
+better.</p><h2 id="thanasisn-50">2017-10-30 09:23 [ThanasisN]</h2>
 <p><strong>Description</strong></p>
 <p>Noise on all broadbands</p>
 <p>CHP-1 tracker was stack due to radmon</p>
@@ -544,30 +550,25 @@ better.</p><h2 id="thanasisn-48">2017-10-30 09:23 [ThanasisN]</h2>
 <p>Reboot was done.</p>
 <p>After reboot all broadband show too much signal noise.</p>
 <p>Reboot was done.</p>
-<p>Measurements seems correct now.</p><h2 id="thanasisn-49">2017-12-05
+<p>Measurements seems correct now.</p><h2 id="thanasisn-51">2017-12-05
 [ThanasisN]</h2>
 <p>Tracker seems to have been displaced</p>
 <p>There is no written account</p>
-<p>Two resets was done</p><h2 id="thanasisn-50">2017-12-13
+<p>Two resets was done</p><h2 id="thanasisn-52">2017-12-13
 [ThanasisN]</h2>
 <p>Global and direct irradiance seems suspicious</p><h2
-id="thanasisn-51">2017-12-15 [ThanasisN]</h2>
+id="thanasisn-53">2017-12-15 [ThanasisN]</h2>
 <p>Tracker did not start today.</p>
 <p>Reboot was needed to start.</p>
 <p>After first reboot erratic data on all broadband.</p>
 <p>Second reboot done.</p>
 <p>After second reboot data seems normal.</p><h2
-id="thanasisn-52">2017-12-18 10:04 [ThanasisN]</h2>
+id="thanasisn-54">2017-12-18 10:04 [ThanasisN]</h2>
 <p>CHP-1 tracker was stack due to radmon</p>
 <p>Reboot was done</p>
 <p>After reboot all measurements seems correct.</p>
 <p>It is possible to have been stacked <strong>more than one
-day</strong></p><h2 id="thanasisn-53">2017-12-25 [ThanasisN]</h2>
-<p>Async and step data shows that tracker is not working.</p>
-<p>The signal from CHP-1 is zero!!</p>
-<p>Will exclude direct data from analysis.</p><h2
-id="thanasisn-54">2017-12-26 [ThanasisN]</h2>
-<p>Tracker start working by itself probably!</p>
+day</strong></p>
 </div>
 <h1 id="section-4">2018</h1>
 <div class="columns"
@@ -856,6 +857,9 @@ a message that prevent it to run normally.</p>
 <p>After the message was cleared, it start operation.</p>
 <p>Probably was frozen from yesterday.</p><h2 id="eet">2024-02-02 16:28
 EET</h2>
+<p>Today morning the main roof door was found broken.</p>
+<p>Later in the noon we see through the camera people walking among the
+instruments.</p>
 </div>
 <hr />
 <h1 id="journal-instructions">Journal instructions</h1>
@@ -900,13 +904,13 @@ entries files</h2>
 <p>At least you need <code>pandoc</code> installed.</p>
 <h1 id="list-of-tags">List of tags</h1>
 <pre><code>  5 #async
- 40 #chp1
+ 37 #chp1
   1 #cleaning
-  5 #cm21
+  4 #cm21
   2 #codding
   2 #data_corruption_certain
   1 #data_format_change
- 27 #data_loss
+ 25 #data_loss
   1 #down_time
   3 #error
   4 #katastroph
@@ -918,30 +922,31 @@ entries files</h2>
   1 #radmon_reboot
   4 #silica
   2 #sun_vector
-  7 #suspicious_data
+  5 #suspicious_data
   1 #sync
   1 #temp
   6 #tracker
  20 #tracker2</code></pre>
 <h1 id="new-list-of-tags">New List of tags</h1>
 <pre><code>  1 brewers
-  4 broadband
+  5 broadband
   1 ccd
- 27 chp1
+ 30 chp1
  17 cleaning
-  9 cm21
+ 10 cm21
   1 data_corruption_certain
-  9 data_loss
+ 12 data_loss
   2 down_time
   4 error
   1 INCcm21
   2 inclined
   4 leveling
- 13 problem
+ 14 problem
   6 radmon
+  1 roof
   3 sighting
   3 silica
-  4 suspicious_data
+  6 suspicious_data
   1 test
   8 tracker
   1 works</code></pre>                    
