--- a/JOURNAL/Journal.html
+++ b/JOURNAL/Journal.html
@@ -70,7 +70,7 @@ LAP.</p>
 <h2 id="table-of-contents">Table of Contents</h2>
 <div class="columns"
 style="column-count: 2 ;; column-gap: 4em ;; column-rule: 1px solid black ;">
-<!--ts--><!-- Created by https://github.com/ekalinin/github-markdown-toc --><!-- Added by: athan, at: Sat Jan 18 17:40:04 EET 2025 --><!--te-->
+<!--ts--><!-- Created by https://github.com/ekalinin/github-markdown-toc --><!-- Added by: athan, at: Sun Jan 19 09:40:04 EET 2025 --><!--te-->
 </div>
 <hr />
 <h1 id="section">1996</h1>
@@ -663,6 +663,13 @@ EET</h2>
 <p>Later in the noon we see through the camera people walking among the
 instruments.</p>
 </div>
+<h1 id="section-10">2025</h1>
+<div class="columns"
+style="column-count: 2 ;; column-gap: 4em ;; column-rule: 1px solid black ;">
+<h2 id="eet-thanasisn-1">2025-01-19 09:13 EET [ThanasisN]</h2>
+<p>Most of the processes are done in Duckdb now.</p>
+<p>There are some secondary scripts to migrate.</p>
+</div>
 <hr />
 <h1 id="journal-instructions">Journal instructions</h1>
 <h2 id="format-for-entries">Format for entries</h2>
@@ -742,6 +749,7 @@ entries files</h2>
   1 data_corruption_certain
  12 data_loss
   2 down_time
+  1 duckdb
   4 error
   2 inclined
   4 leveling
